--- a/example.jsonc
+++ b/example.jsonc
@@ -9,11 +9,12 @@ version now: 2
     "port": 9010, // 监听端口, 默认 9010
     "secret": "MySecret", // 密钥, 更新状态时使用
     "status": 0, // 目前的状态 (整数)
+    "app_name": "系统桌面", //当前使用的软件名称
     "status_list": [ // 状态列表, 索引从 0 开始, 对应上面的 status
         { // status: 0
             "id": 0, // 与索引相同，非必须，仅为方便查看 (建议加上)
-            "name": "活着", // 状态名称
-            "desc": "目前在线，可以通过任何可用的联系方式联系本人。", // 状态描述
+            "name": "APP", // 状态名称
+            "desc": "目前手机使用的应用，大概率在玩手机摸鱼。", // 状态描述
             "color": "awake" // 状态颜色, 对应 templates/style.css 中的 .sleeping .awake 等类, 可自行前往修改
         },
         { // status: 1
